--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -30,7 +30,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [-2.70000005, 0, 0]
+      Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
       Scale: [0.0399999991, 0.0500000007, 0.0799999982]
     Com_Model:
@@ -49,7 +49,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0, 0.00596779585, 0]
+      Translation: [0, -0.493999988, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_Model:
@@ -59,3 +59,123 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 1
+  - Name: Empty Object
+    UUID: 721093195873755760
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [-2.87899995, -0.483714074, 0.0354494154]
+      Rotation: [8.32912974e-07, 85.8245697, 94.4999619]
+      Scale: [2.19999981, 1.99999857, 0.999994755]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: Effect_Corn.fbx
+      HasCollider: false
+      EffectFilePath: ""
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Dust_003_TEX_KKJ.tga
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\222.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [0.400000006, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.100000001]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 1.20000005
+      DistortionBias: 0.400000006
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0, 0, 0]
+  - Name: E_RockEff2
+    UUID: 10038508682520728509
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [-178.999939, -89, -89]
+      Scale: [2.60100031, 2.59994125, 3.00000024]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: Effect_HalfCircleY.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\LV_ElRano_Object_SpermaPropB_E_LBR.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Dust.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_007_TEX_CJH.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Noise02.dds
+      TextureNormalPath: ""
+      ScrollSpeedX: [1.29999995, 0.600000024, 0]
+      ScrollSpeedY: [1.10000002, 3.4000001, 2.29999995]
+      Distortion1: [0, 0.300000012]
+      Distortion2: [0.400000006, 0]
+      Distortion3: [0.200000003, 0]
+      DistortionScale: 0.200000003
+      DistortionBias: 1.20000005
+      FadeOut: false
+      FadeOutDuration: 2
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0.200000003
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0.217391312, 0, 0]
+  - Name: E_RockDecal
+    UUID: 4766292534011152679
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.335000008, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1.5, 0.100000001, 1.5]
+    Com_Decal:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\f_06_blur.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\DooDecal\FX_Crack_007_TEX_KKJ.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 2
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 2
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0.347826123, 0, 0]
