--- a/Assets/Scenes/Dungeon2.yaml
+++ b/Assets/Scenes/Dungeon2.yaml
@@ -77,6 +77,7 @@ GameObjects:
       TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_HKB.dds
       TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\abs.png
       TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Fx_Water_002_Tex_Pys.png
+      TextureNormalPath: ""
       ScrollSpeedX: [-0.100000001, -0.100000001, 0]
       ScrollSpeedY: [-0.100000001, -0.191, 2.20000005]
       Distortion1: [0.100000001, 0.200000003]
@@ -95,6 +96,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
   - Name: CamCollider1
     UUID: 12612541215930593208
     Active: true
