--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -59,44 +59,6 @@ GameObjects:
     HasCollider: false
     RenderGroup: 1
     FrustumRange: 100
-  - Name: Wall
-    UUID: 843996683983716321
-    Active: true
-    Layer: Default
-    Instancing: true
-    Type: Object
-    PassIndex: 0
-    NumOBB: 0
-    Com_Transform:
-      Translation: [0, 0, -2.84713697]
-      Rotation: [0, -0, 0]
-      Scale: [9.79273987, 1, 0.00378112844]
-    Com_Collider:
-      Center: [0, 0, 0]
-      Type: Box
-      Size: [10, 10, 0.100000001]
-      Angle:
-        - 0
-        - 0
-        - 0
-      RigidBody:
-        Enabled: false
-        Gravity: false
-        Kinematic: false
-        CharacterController: false
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Wall\Wall(face)\
-      MeshFileName: Wall0.fbx
-      HasCollider: false
-      Equipment: false
-    Translation: [0, 0, -2.84713697]
-    Rotation: [0, -0, 0]
-    Scale: [9.79273987, 1, 0.00378112844]
-    MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Wall\Wall(face)\
-    MeshFileName: Wall0.fbx
-    HasCollider: false
-    RenderGroup: 1
-    FrustumRange: 1
   - Name: TestMonster
     UUID: 8617912300921592626
     Active: true
@@ -190,44 +152,6 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [0.467000008, 0, 0.878000021, 1]
-  - Name: Empty Object
-    UUID: 2352509968335960163
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 1.07719445, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_bloodse.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\222.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.384057999, 0.356999993, 0.470999986, 0.800000012]
   - Name: E_IIBlood
     UUID: 12569516535572226087
     Active: true
@@ -237,19 +161,19 @@ GameObjects:
     PassIndex: 0
     BillBord: false
     Com_Transform:
-      Translation: [1, 1, 1]
+      Translation: [0, 1, -1]
       Rotation: [0, -0, 0]
       Scale: [0.99855417, 1.0005976, 1.0012449]
     Com_RectInstance:
       Shape: 1
       InstNum: 100
-      Color: [0.70575279, 0.0161156654, 0, 0]
+      Color: [0.704278529, 0.0156028755, 0, 0]
       Speed: 1.79999995
       LifeTime: 2.0999999
       Size: 0.699999988
-      StartRadian: 90
+      StartRadian: 0
       RadiationAngle: 50
-      LerpColor: true
+      LerpColor: false
       SrcColor: [0.753623188, 0.0327662192, 0, 0]
       DestColor: [0.659420252, 0, 0, 0]
     Effect_Setting:
@@ -314,3 +238,154 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [0, 0, 0, 0]
+  - Name: Empty Object
+    UUID: 16682185199152379195
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 1, -1]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_RectInstance:
+      Shape: 1
+      InstNum: 100
+      Color: [0.942028999, 0, 0, 0]
+      Speed: 3
+      LifeTime: 5
+      Size: 0.300000012
+      StartRadian: -10
+      RadiationAngle: 10
+      LerpColor: false
+      SrcColor: [0, 0, 0, 0]
+      DestColor: [1, 1, 1, 0]
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
+  - Name: E_Ursa_SoilDust
+    UUID: 5305419133825331868
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 17
+    BillBord: true
+    Com_Transform:
+      Translation: [1.41224837, 0.540380895, 0.14303574]
+      Rotation: [-14.6169491, -5.14228249, 1.07152943e-07]
+      Scale: [0.925123751, 1.00323248, 0.892349064]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 4
+      SpriteNumY: 8
+      SpriteTotal: 32
+      SpriteSpeed: 50
+      OffsetColor: [0.369565189, 0.286546916, 0.286546916, -0.25999999]
+  - Name: BoxCol
+    UUID: 17455003932267700337
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, -0.135408461, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [4, 0.5, 4]
+      Angle:
+        - 0
+        - 0
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: E_UrsaeDust
+    UUID: 5120974272251489655
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: true
+    Com_Transform:
+      Translation: [-0.0168395545, 1.0680685, 0.160352141]
+      Rotation: [-14.616951, -5.14228296, 1.07152943e-07]
+      Scale: [2.37476563, 0.80013895, 2.00598788]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke3.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.25
+      FadeOut: true
+      FadeOutDuration: 2.75
+      FadeOutStratTime: 0.25
+      FadeIn: true
+      FadeInDuration: 0.25
+      FadeInStratTime: 0
+      EffectDuration: 3
+      SpriteNumX: 8
+      SpriteNumY: 8
+      SpriteTotal: 64
+      SpriteSpeed: 70
+      OffsetColor: [0, 0, 0, -0.5]
