--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -179,3 +179,41 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [1, 0.347826123, 0, 0]
+  - Name: E_DropDust
+    UUID: 1859417684721566519
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0.485000014, -3.70000005]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Sprite\DiscSmoke01_16x4.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 2
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 2
+      SpriteNumX: 16
+      SpriteNumY: 4
+      SpriteTotal: 64
+      SpriteSpeed: 30
+      OffsetColor: [0, 0, 0, 0]
